--- a/rendu_8/rendu_8.ipynb
+++ b/rendu_8/rendu_8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "id": "XTCHhs5BWumt"
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "id": "WSYZFb5oW2wp"
    },
@@ -223,44 +223,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2025-02-20 18:45:20.285115: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1740073521.103410  128205 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1740073521.252051  128205 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1740073523.685747  128205 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1740073523.685784  128205 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1740073523.685786  128205 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1740073523.685787  128205 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-02-20 18:45:24.053700: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
       "/home/ob1/Documents/Entrainement_ia/venv/lib/python3.10/site-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
       "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
-      "2025-02-19 15:06:05.434194: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n"
+      "2025-02-20 18:46:22.553429: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AttributeError: module 'ml_dtypes' has no attribute 'float4_e2m1fn'\n"
      ]
     }
    ],
    "source": [
-    "# Modele\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from sklearn.metrics import confusion_matrix, roc_curve, auc\n",
+    "from tensorflow.keras.layers import Dense, Dropout, SpatialDropout1D, Conv2D, MaxPooling2D, Flatten, LSTM, Reshape, BatchNormalization, Bidirectional\n",
+    "from sklearn.preprocessing import label_binarize\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from PIL import Image\n",
+    "\n",
+    "\n",
+    "# Charger les données MNIST\n",
+    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
+    "\n",
+    "x_train = x_train.reshape(-1, 28, 28, 1)\n",
+    "x_test = x_test.reshape(-1, 28, 28, 1)\n",
+    "\n",
+    "# Normalisation\n",
+    "x_train = x_train / 255.0\n",
+    "x_test = x_test / 255.0\n",
+    "\n",
+    "# Inversion\n",
+    "x_train = 1 - x_train\n",
+    "x_test = 1 - x_test\n",
+    "\n",
+    "\n",
     "model = tf.keras.models.Sequential([\n",
-    "    Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
-    "    MaxPooling2D((2,2)),\n",
+    "    Conv2D(32, (3, 3), activation='relu', padding=\"same\", input_shape=(28, 28, 1)),\n",
+    "    BatchNormalization(),\n",
+    "    MaxPooling2D((2,2), strides=2),\n",
     "    Dropout(0.2),\n",
     "\n",
-    "    Conv2D(64, (3, 3), activation='relu'),\n",
-    "    MaxPooling2D((2,2)),\n",
+    "    Conv2D(64, (3, 3), activation='relu', padding=\"same\"),\n",
+    "    BatchNormalization(),\n",
+    "    MaxPooling2D((2,2), strides=2),\n",
     "    Dropout(0.2),\n",
     "\n",
-    "    Flatten(),\n",
-    "\n",
-    "    Dense(128, activation=\"relu\"),\n",
-    "    Dropout(0.5),\n",
+    "    Conv2D(128, (3, 3), activation='relu', padding=\"same\"),\n",
+    "    BatchNormalization(),\n",
+    "    MaxPooling2D((2,2), strides=2),\n",
+    "    Dropout(0.2),\n",
+    "    \n",
+    "    Reshape((-1, 128)), \n",
+    "    Bidirectional(LSTM(128, activation='tanh')),\n",
+    "    BatchNormalization(),\n",
+    "    Dropout(0.3),\n",
     "\n",
     "    Dense(10, activation=\"softmax\")\n",
     "])\n",
     "\n",
-    "model.compile(optimizer='adam', loss=\"sparse_categorical_crossentropy\", metrics=['accuracy'])\n"
+    "model.compile(optimizer=Adam(learning_rate=0.001), loss=\"sparse_categorical_crossentropy\", metrics=['accuracy'])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -270,43 +318,36 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AttributeError: module 'ml_dtypes' has no attribute 'float4_e2m1fn'\n",
-      "Epoch 1/10\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-19 15:06:06.580355: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 188160000 exceeds 10% of free system memory.\n"
+      "2025-02-20 18:46:31.607681: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 188160000 exceeds 10% of free system memory.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m33s\u001b[0m 16ms/step - accuracy: 0.8117 - loss: 0.5736 - val_accuracy: 0.9832 - val_loss: 0.0512\n",
+      "Epoch 1/10\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m112s\u001b[0m 52ms/step - accuracy: 0.8722 - loss: 0.4004 - val_accuracy: 0.9829 - val_loss: 0.0511\n",
       "Epoch 2/10\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 16ms/step - accuracy: 0.9687 - loss: 0.1051 - val_accuracy: 0.9883 - val_loss: 0.0385\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m85s\u001b[0m 45ms/step - accuracy: 0.9763 - loss: 0.0762 - val_accuracy: 0.9905 - val_loss: 0.0309\n",
       "Epoch 3/10\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 16ms/step - accuracy: 0.9778 - loss: 0.0736 - val_accuracy: 0.9892 - val_loss: 0.0340\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m95s\u001b[0m 51ms/step - accuracy: 0.9802 - loss: 0.0643 - val_accuracy: 0.9909 - val_loss: 0.0252\n",
       "Epoch 4/10\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 16ms/step - accuracy: 0.9817 - loss: 0.0620 - val_accuracy: 0.9914 - val_loss: 0.0253\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m95s\u001b[0m 51ms/step - accuracy: 0.9854 - loss: 0.0480 - val_accuracy: 0.9930 - val_loss: 0.0216\n",
       "Epoch 5/10\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m30s\u001b[0m 16ms/step - accuracy: 0.9838 - loss: 0.0537 - val_accuracy: 0.9920 - val_loss: 0.0225\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m95s\u001b[0m 51ms/step - accuracy: 0.9861 - loss: 0.0437 - val_accuracy: 0.9922 - val_loss: 0.0245\n",
       "Epoch 6/10\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 16ms/step - accuracy: 0.9844 - loss: 0.0475 - val_accuracy: 0.9932 - val_loss: 0.0211\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m95s\u001b[0m 51ms/step - accuracy: 0.9866 - loss: 0.0415 - val_accuracy: 0.9917 - val_loss: 0.0267\n",
       "Epoch 7/10\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 16ms/step - accuracy: 0.9870 - loss: 0.0413 - val_accuracy: 0.9934 - val_loss: 0.0229\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m95s\u001b[0m 51ms/step - accuracy: 0.9890 - loss: 0.0365 - val_accuracy: 0.9935 - val_loss: 0.0226\n",
       "Epoch 8/10\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 16ms/step - accuracy: 0.9874 - loss: 0.0403 - val_accuracy: 0.9931 - val_loss: 0.0226\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m95s\u001b[0m 51ms/step - accuracy: 0.9893 - loss: 0.0337 - val_accuracy: 0.9848 - val_loss: 0.0489\n",
       "Epoch 9/10\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 16ms/step - accuracy: 0.9889 - loss: 0.0376 - val_accuracy: 0.9926 - val_loss: 0.0228\n",
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m95s\u001b[0m 51ms/step - accuracy: 0.9907 - loss: 0.0282 - val_accuracy: 0.9916 - val_loss: 0.0306\n",
       "Epoch 10/10\n",
-      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m31s\u001b[0m 16ms/step - accuracy: 0.9886 - loss: 0.0353 - val_accuracy: 0.9938 - val_loss: 0.0190\n"
+      "\u001b[1m 984/1875\u001b[0m \u001b[32m━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━\u001b[0m \u001b[1m41s\u001b[0m 46ms/step - accuracy: 0.9919 - loss: 0.0252"
      ]
     }
    ],
@@ -327,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
