--- a/rendu_8/rendu_8_CNN_RNN.ipynb
+++ b/rendu_8/rendu_8_CNN_RNN.ipynb
@@ -65,35 +65,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "WSYZFb5oW2wp"
    },
    "outputs": [],
    "source": [
-    "class ImageGenerator:\n",
+    "# Fonction de création d'une image 'imparfaite' via une ancienne image - style 2\n",
     "\n",
-    "    @staticmethod\n",
-    "    def create_imperfect_image(image, image_size=(56, 56), seed=1):\n",
-    "        random.seed(seed)\n",
-    "        new_image = np.ones((*image_size, image.shape[2]), dtype=np.uint8)\n",
+    "def create_imperfect_image(image, image_size=(56, 56), seed=1):\n",
+    "    random.seed(seed)\n",
+    "    new_image = np.ones((*image_size, image.shape[2]), dtype=np.uint8)\n",
     "\n",
-    "        max_offset = image_size[0] - image.shape[0]\n",
-    "        random_x = random.randint(0, max_offset)\n",
-    "        random_y = random.randint(0, max_offset)\n",
+    "    max_offset = image_size[0] - image.shape[0]\n",
+    "    random_x = random.randint(0, max_offset)\n",
+    "    random_y = random.randint(0, max_offset)\n",
     "\n",
-    "        new_image[random_x:random_x+image.shape[0], random_y:random_y+image.shape[1], :] = image\n",
-    "        return new_image"
+    "    new_image[random_x:random_x+image.shape[0], random_y:random_y+image.shape[1], :] = image\n",
+    "    return new_image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "-gRN2oQ5ayt4"
    },
    "outputs": [],
    "source": [
+    "# Fonction de création de nouvelles images via d'anciennes - style 1\n",
+    "\n",
     "def generation_propre(X, y, nb=10000, seed=1):\n",
     "    datagen = ImageDataGenerator(\n",
     "        rotation_range=20,\n",
@@ -121,22 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "id": "N8E7yawV_LZ4"
    },
    "outputs": [],
    "source": [
-    "# Création image 56 x 56 avec chiffre positioné aléatoirement\n",
-    "# L'image est ensuite redimensionnée -> 28 x 28\n",
+    "# Fonction de création de nouvelles images via d'anciennes - style 2\n",
     "\n",
-    "def generation_2(X, y, nb=10000, seed=1):\n",
+    "\n",
+    "def generation_imparfaite(X, y, nb=10000, seed=1):\n",
     "    new_images = X.tolist()\n",
     "    new_images_label = y.tolist()\n",
     "\n",
     "    for i in range(nb):\n",
-    "        imperfect_image = ImageGenerator.create_imperfect_image(X[i], seed=i+seed)\n",
+    "        imperfect_image = create_imperfect_image(X[i], seed=i+seed)\n",
     "\n",
     "        # imperfect_image = tf.image.resize(imperfect_image, (28, 28))\n",
     "        imperfect_image = tf.expand_dims(imperfect_image, axis=0)\n",
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -209,8 +210,8 @@
     "x_test = 1 - x_test\n",
     "\n",
     "# Génération de nouvelles données imparfaites\n",
-    "x_train, y_train = generation_propre(x_train, y_train, 20000)\n",
-    "x_train, y_train = generation_2(x_train, y_train, 25000)\n",
+    "x_train, y_train = generation_propre(x_train, y_train, 20000) #  style 1\n",
+    "x_train, y_train = generation_imparfaite(x_train, y_train, 25000) #  style 2\n",
     "\n",
     "# Mélange (pour validation_split)\n",
     "np.random.seed(42)\n",
@@ -643,6 +644,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Maintenant, voici les résultats sur les tests de base"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -740,6 +748,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Et voici les résultats sur les 10 000 images de tests après avoir été modifiées par _generation_propre_ (style 1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
@@ -812,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -835,8 +850,15 @@
    ],
    "source": [
     "# generation_2\n",
-    "new_images, new_images_label = generation_2(x_test, y_test, seed=2)\n",
+    "new_images, new_images_label = generation_imparfaite(x_test, y_test, seed=2)\n",
     "new_images, new_images_label = new_images[10000:], new_images_label[10000:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3e tests, toujours les 10 000 images du jeu de tests mais cette fois, en etant modifiées pas generation_imparfaite (style 2)"
    ]
   },
   {
@@ -911,16 +933,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "id": "71OTDuBy4uUB"
    },
    "outputs": [],
    "source": [
-    "# Combinaison de toutes les données\n",
+    "# Combinaison de toutes les données de tests\n",
     "\n",
     "x_test_global = np.concatenate((x_test, new_images, new_images_propre))\n",
     "y_test_global = np.concatenate((y_test, new_images_label, new_images_propre_label))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enfin, la moyenne des 3 tests précédent (30 000 images au total)"
    ]
   },
   {
